add_executable(hello_triangle main.cpp)
# Vulkan/Windows sample links the editor shell (Dear ImGui through the RHI); the editor is gated to
# non-Apple in the root CMakeLists, so this link only happens on the Vulkan path.
target_link_libraries(hello_triangle PRIVATE hf_engine hf_editor)
target_compile_definitions(hello_triangle PRIVATE HF_HAS_EDITOR=1)

# --- Material graph (Slice AV): regenerate the showcase fragment shader from its *.mat.json at build
# time via the material_codegen host tool. The JSON is the source of truth; the generated HLSL is
# committed (shaders/generated/) for diff transparency + so the standalone Metal build has it without
# running the tool. Re-runs whenever the JSON, the tool, or the shared PBR core changes. -------------
set(MAT_JSON "${CMAKE_SOURCE_DIR}/assets/materials/showcase.mat.json")
set(MAT_GEN_HLSL "${CMAKE_SOURCE_DIR}/shaders/generated/mat_showcase.frag.hlsl")
add_custom_command(
  OUTPUT "${MAT_GEN_HLSL}"
  COMMAND material_codegen "${MAT_JSON}" "${MAT_GEN_HLSL}"
  DEPENDS material_codegen "${MAT_JSON}"
          "${CMAKE_SOURCE_DIR}/shaders/pbr_core.hlsli"
  COMMENT "material_codegen showcase.mat.json -> mat_showcase.frag.hlsl"
  VERBATIM)
# Slice AW: a SECOND material (different node mix) regenerated the same way; its committed HLSL is
# what Metal renders (Metal stays build-time). On Vulkan it is rendered via the RUNTIME compile path.
set(MAT2_JSON "${CMAKE_SOURCE_DIR}/assets/materials/showcase2.mat.json")
set(MAT2_GEN_HLSL "${CMAKE_SOURCE_DIR}/shaders/generated/mat_showcase2.frag.hlsl")
add_custom_command(
  OUTPUT "${MAT2_GEN_HLSL}"
  COMMAND material_codegen "${MAT2_JSON}" "${MAT2_GEN_HLSL}"
  DEPENDS material_codegen "${MAT2_JSON}"
          "${CMAKE_SOURCE_DIR}/shaders/pbr_core.hlsli"
  COMMENT "material_codegen showcase2.mat.json -> mat_showcase2.frag.hlsl"
  VERBATIM)
# Slice AZ: a THIRD material exercising the new node types (Swizzle/MakeFloat3/Power/Saturate/
# OneMinus). The multi-material showcase draws all three in one frame. Same build-time codegen path.
set(MAT3_JSON "${CMAKE_SOURCE_DIR}/assets/materials/showcase3.mat.json")
set(MAT3_GEN_HLSL "${CMAKE_SOURCE_DIR}/shaders/generated/mat_showcase3.frag.hlsl")
add_custom_command(
  OUTPUT "${MAT3_GEN_HLSL}"
  COMMAND material_codegen "${MAT3_JSON}" "${MAT3_GEN_HLSL}"
  DEPENDS material_codegen "${MAT3_JSON}"
          "${CMAKE_SOURCE_DIR}/shaders/pbr_core.hlsli"
  COMMENT "material_codegen showcase3.mat.json -> mat_showcase3.frag.hlsl"
  VERBATIM)
add_custom_target(hello_triangle_matgen DEPENDS "${MAT_GEN_HLSL}" "${MAT2_GEN_HLSL}" "${MAT3_GEN_HLSL}")
# Slice BE: the NormalMap-node material (PBROutput.normal = NormalMap(slot="normalmap")). Same
# build-time codegen path; its committed generated HLSL flows through the same DXC->SPIR-V (and
# glslc->MSL) toolchain. The --material-normal-shot showcase renders a sphere shaded by it.
set(MATNORMAL_JSON "${CMAKE_SOURCE_DIR}/assets/materials/normalmap.mat.json")
set(MATNORMAL_GEN_HLSL "${CMAKE_SOURCE_DIR}/shaders/generated/mat_normalmap.frag.hlsl")
add_custom_command(
  OUTPUT "${MATNORMAL_GEN_HLSL}"
  COMMAND material_codegen "${MATNORMAL_JSON}" "${MATNORMAL_GEN_HLSL}"
  DEPENDS material_codegen "${MATNORMAL_JSON}"
          "${CMAKE_SOURCE_DIR}/shaders/pbr_core.hlsli"
  COMMENT "material_codegen normalmap.mat.json -> mat_normalmap.frag.hlsl"
  VERBATIM)
add_custom_target(hello_triangle_matgen_normal DEPENDS "${MATNORMAL_GEN_HLSL}")
add_dependencies(hello_triangle hello_triangle_matgen hello_triangle_matgen_normal)

set(SHADER_OUT "${CMAKE_CURRENT_BINARY_DIR}/shaders")
# The ui.vert/frag shaders are Vulkan-only (editor) — added only to the Vulkan sample's compile list,
# never to the metal_headless gen list, so the Metal shader generation is untouched.
hf_compile_shaders(
  TARGET hello_triangle
  OUTPUT_DIR "${SHADER_OUT}"
  SHADERS
    "shaders/lit.vert.hlsl:vs"
    "shaders/lit.frag.hlsl:ps"
    "shaders/lit_csm.frag.hlsl:ps"
    "shaders/shadow_csm.vert.hlsl:vs"
    # Spot light + perspective spot-light shadow (Slice AE): cone-cut lit fragment + reuse the CSM
    # depth-only caster (spotViewProj in the push constant).
    "shaders/lit_spot.frag.hlsl:ps"
    # Omnidirectional point-light shadow (Slice AF): 6-face cube atlas lit fragment + reuse the CSM
    # depth-only caster (per-face view-proj in the push constant).
    "shaders/lit_point.frag.hlsl:ps"
    # Clustered / Forward+ lit fragment (Slice AG): per-fragment cluster index + iterate that
    # cluster's point lights from three fragment-stage storage buffers (set 3).
    "shaders/lit_clustered.frag.hlsl:ps"
    "shaders/lit_pbr.frag.hlsl:ps"
    "shaders/lit_pbr_ibl.frag.hlsl:ps"
    # Data-driven material graph (Slice AV): the build-time-generated fragment from
    # assets/materials/showcase.mat.json (regenerated by the hello_triangle_matgen custom command
    # above). Reuses lit.vert + the existing PBR descriptor layout; shares pbr_core.hlsli.
    "shaders/generated/mat_showcase.frag.hlsl:ps"
    # Slice AW: the SECOND material's build-time-generated fragment. On Vulkan the live/dry-run path
    # RUNTIME-compiles showcase2.mat.json; this build-time .spv is kept for parity/diagnostics + so the
    # generated HLSL is exercised by the same DXC the runtime path uses.
    "shaders/generated/mat_showcase2.frag.hlsl:ps"
    # Slice AZ: the THIRD material's build-time-generated fragment (new node types). Drawn alongside
    # showcase + showcase2 in the --material-multi-shot multi-material scene; also runtime-compiled
    # via --material-live-shot to prove the new nodes survive the dxc runtime path.
    "shaders/generated/mat_showcase3.frag.hlsl:ps"
    # Slice BE: the NormalMap-node material's build-time-generated fragment (a tangent-space normal
    # map perturbs the shading normal via the same TBN as lit.frag). Drawn by --material-normal-shot;
    # also runtime-compiled via --material-live-shot to prove the NormalMap node survives the dxc path.
    "shaders/generated/mat_normalmap.frag.hlsl:ps"
    "shaders/sky_hdr.frag.hlsl:ps"
    "shaders/lit_skinned.vert.hlsl:vs"
    "shaders/shadow_skinned.vert.hlsl:vs"
    "shaders/lit_instanced.vert.hlsl:vs"
    "shaders/shadow_instanced.vert.hlsl:vs"
    "shaders/transparent.vert.hlsl:vs"
    "shaders/transparent.frag.hlsl:ps"
    "shaders/shadow.vert.hlsl:vs"
    "shaders/shadow.frag.hlsl:ps"
    "shaders/post.vert.hlsl:vs"
    "shaders/post.frag.hlsl:ps"
    "shaders/bloom_prefilter.frag.hlsl:ps"
    "shaders/bloom_downsample.frag.hlsl:ps"
    "shaders/bloom_upsample.frag.hlsl:ps"
    "shaders/bloom_composite.frag.hlsl:ps"
    "shaders/sky.vert.hlsl:vs"
    "shaders/sky.frag.hlsl:ps"
    "shaders/particles.comp.hlsl:cs"
    "shaders/particle.vert.hlsl:vs"
    "shaders/particle.frag.hlsl:ps"
    "shaders/ui.vert.hlsl:vs"
    "shaders/ui.frag.hlsl:ps"
    # Text / HUD renderer (Slice BA): NDC pass-through vertex + atlas-coverage fragment (configurable
    # text color in a fragment push constant). Alpha-blended screen-space overlay drawn after post.
    "shaders/text.vert.hlsl:vs"
    "shaders/text.frag.hlsl:ps"
    # CPU particle / VFX emitter billboards (Slice CC): world-space camera-facing quad verts (built
    # CPU-side by vfx::BuildBillboards) projected by FrameData.viewProj, carrying a per-vertex color +
    # corner UV; the fragment computes a procedural soft round sprite (like the decal) modulated by the
    # particle color, additively blended over the lit scene. DISTINCT from the gpu-particles fountain.
    "shaders/vfx.vert.hlsl:vs"
    "shaders/vfx.frag.hlsl:ps"
    # Immediate-mode debug-draw line pipeline (Slice W): world-space line verts projected by
    # FrameData.viewProj, flat per-vertex color. LINE_LIST topology.
    "shaders/debug_line.vert.hlsl:vs"
    "shaders/debug_line.frag.hlsl:ps"
    # SSAO chain (Slice Y): view-space normal+linear-depth g-buffer prepass (static + instanced
    # vertex variants + shared fragment), hemisphere-kernel AO pass, box blur, and composite/apply.
    "shaders/gbuffer.vert.hlsl:vs"
    "shaders/gbuffer_instanced.vert.hlsl:vs"
    "shaders/gbuffer.frag.hlsl:ps"
    "shaders/ssao.frag.hlsl:ps"
    "shaders/ssao_blur.frag.hlsl:ps"
    "shaders/ssao_composite.frag.hlsl:ps"
    # Screen-space reflections (Slice AH): reuses the SSAO g-buffer (view normal + linear depth);
    # ssr.frag ray-marches the depth buffer for on-screen reflections, ssr_composite blends +
    # tonemaps. Existing gbuffer/ssao/bloom shaders + their goldens untouched.
    "shaders/ssr.frag.hlsl:ps"
    "shaders/ssr_composite.frag.hlsl:ps"
    # Water rendering (Slice CF): water.vert displaces a flat NxN grid by the summed Gerstner waves at a
    # FIXED time (render/water.h math, mirrored in-shader); water.frag recomputes the analytic wave
    # normal and shades a fresnel blend of a SKY reflection (reusing SkyColor) and a REFRACTED scene
    # (sampling the HDR scene-color RT + G-buffer like SSR, tinted by depth) + a sun specular glint;
    # water_composite blends lerp(scene, water.rgb, water.a) + tonemaps. Existing shaders + goldens
    # untouched.
    "shaders/water.vert.hlsl:vs"
    "shaders/water.frag.hlsl:ps"
    "shaders/water_composite.frag.hlsl:ps"
    # Screen-space global illumination (Slice BP): reuses the SSAO/SSR g-buffer (view normal + linear
    # depth) + the lit HDR scene. ssgi.frag traces K cosine-hemisphere rays per pixel and marches them
    # (the SAME view-space march + binary-search as ssr.frag), sampling the lit scene as indirect
    # diffuse radiance; ssgi_composite ADDS indirect*albedo over the scene + tonemaps. Existing
    # gbuffer/ssao/ssr/bloom shaders + their goldens untouched.
    "shaders/ssgi.frag.hlsl:ps"
    "shaders/ssgi_composite.frag.hlsl:ps"
    # SSGI spatial denoise (Slice BR): a depth+normal-guided BILATERAL blur of the SSGI indirect buffer
    # (same NxN fullscreen shape as ssao_blur, but each tap weighted by the G-buffer edge-stop) — smooths
    # the floor color-bleed pool while keeping the bleed crisp at edges. Inserted on the SSGI path before
    # ssgi_composite, behind --ssgi-denoise-shot ONLY; the raw --ssgi-shot path + ssgi.png stay unchanged.
    "shaders/ssgi_denoise.frag.hlsl:ps"
    # Temporal SSGI accumulation (Slice BV): a running-mean accumulation pass that folds N=8 jittered
    # SSGI indirect frames (each a golden-angle-rotated hemisphere kernel, via ssgi.frag's `frame` param)
    # into an HDR accumulation RT, then composites the mean like BP. Inserted on the --ssgi-temporal-shot
    # path ONLY; the raw --ssgi-shot + spatial --ssgi-denoise-shot paths + their goldens stay unchanged.
    "shaders/ssgi_accum.frag.hlsl:ps"
    # Volumetric fog / light shafts (Slice AJ): reuses the directional shadow map + SSAO g-buffer;
    # volumetric.frag ray-marches the view ray sampling the shadow map per step for in-scattering,
    # volumetric_composite adds it over the scene + tonemaps. Existing shaders + goldens untouched.
    "shaders/volumetric.frag.hlsl:ps"
    "shaders/volumetric_composite.frag.hlsl:ps"
    # Reflection + irradiance probes (Slice AK): bake the local room into a cube atlas (reflection
    # block) + cosine-convolve an irradiance block, then shade with lit_probe sampling that atlas as
    # LOCAL GI. Reuses lit.vert + the CSM depth-only caster's vertex (probe-face VP in push const) and
    # post.vert for the blit/convolution fullscreen passes. Existing shaders + goldens untouched.
    "shaders/probe_bake.vert.hlsl:vs"
    "shaders/probe_bake.frag.hlsl:ps"
    "shaders/lit_probe.frag.hlsl:ps"
    "shaders/probe_blit.frag.hlsl:ps"
    "shaders/probe_irradiance.frag.hlsl:ps"
    # Temporal anti-aliasing (Slice AP): the resolve pass — neighborhood-clamped history blend over the
    # current jittered HDR scene. Reuses post.vert (fullscreen triangle) + the existing RT/RGBA16F path;
    # the only new shader for the slice. Existing post/bloom/ssao/ssr shaders + goldens untouched.
    "shaders/taa_resolve.frag.hlsl:ps"
    # GPU-driven culling + indirect draw (Slice AR): a compute kernel frustum-culls a 1024-instance
    # grid and ORDER-compacts the survivors + writes the indirect draw-args; reuses lit_instanced.vert
    # for the indirect draw. Existing shaders + goldens untouched.
    "shaders/cull.comp.hlsl:cs"
    # Fully-GPU-driven-CULLED pass (Slice CD): a compute kernel frustum-culls the FULL per-draw list and
    # ORDER-compacts the survivors into the GpuDrivenPerDraw SSBO + the MDI command buffer + writes the
    # survivor count; the host reads the count back and issues ONE DrawIndexedMultiIndirect(count) over
    # lit_gpudriven.{vert,frag}. Composes AR (cull+compact) + BM (MDI) + BZ (bindless) + CB (combined
    # per-draw). Existing shaders + goldens untouched.
    "shaders/gpudriven_cull.comp.hlsl:cs"
    # GPU multi-draw-indirect batching (Slice BM): the MDI lit vertex shader reads the per-draw model
    # matrix + material from a storage buffer indexed by gl_DrawID (SPIR-V DrawIndex). VULKAN-ONLY (the
    # DrawIndex builtin needs shaderDrawParameters); shares the existing lit.frag. Not in the Metal MSL
    # gen list (glslc can't lower DrawIndex; the Metal golden uses the per-object path).
    "shaders/lit_mdi.vert.hlsl:vs"
    # Bindless textures (Slice BZ): the bindless lit vertex (lit.vert + a uint texIndex push constant
    # passed flat to the fragment) + fragment (lit.frag with the base-color source swapped for an
    # unbounded gTextures[] array sampled via NonUniformResourceIndex(texIndex), space4). VULKAN-ONLY
    # (DXC emits SPV_EXT_descriptor_indexing / runtimeDescriptorArray); the Metal golden renders the
    # identical scene via the per-material bound path. Not in the Metal MSL gen list.
    "shaders/lit_bindless.vert.hlsl:vs"
    "shaders/lit_bindless.frag.hlsl:ps"
    # Fully-GPU-driven pass (Slice CB, MDI + bindless capstone): the GPU-driven lit vertex reads the
    # per-draw model+material+texIndex from a storage buffer indexed by gl_DrawID (SPIR-V DrawIndex, BM)
    # and passes texIndex flat; the fragment samples the base color from the unbounded gTextures[] array
    # via NonUniformResourceIndex(texIndex) (SPV_EXT_descriptor_indexing, BZ). ONE DrawIndexedMultiIndirect
    # + ONE BindBindlessTextures draws the whole multi-material scene. VULKAN-ONLY (DXC emits BOTH
    # DrawParameters AND descriptor-indexing); the Metal golden renders the identical scene via the
    # per-object bound path. Not in the Metal MSL gen list (glslc can't lower DrawIndex).
    "shaders/lit_gpudriven.vert.hlsl:vs"
    "shaders/lit_gpudriven.frag.hlsl:ps"
    # Screen-space projected decals (Slice BH): reuses the SSAO/SSR g-buffer (view normal + linear
    # depth) + the lit HDR scene. decal.frag reconstructs the world position (view-space recon like
    # SSR, then view->world via invView), projects it into the decal box, and alpha-blends the decal
    # texture over the scene + tonemaps. Existing gbuffer/ssao/ssr/bloom shaders + goldens untouched.
    "shaders/decal.frag.hlsl:ps"
    # Data-driven post-process stack (Slice BN): the configurable ORDERED composite chain. A SEPARATE
    # final pass from post.frag (the default --shot post path is byte-identical + untouched). Reuses
    # post.vert (fullscreen triangle); applies the configured effects (tonemap/colorgrade/chromatic/
    # vignette/grain) in order from a push-constant effect list. Shared math with engine/render/post_stack.h.
    "shaders/post_stack.frag.hlsl:ps"
)
target_compile_definitions(hello_triangle PRIVATE
  "HF_SHADER_DIR=\"${SHADER_OUT}\"")
# Slice AW: absolute paths to the material graphs the live/runtime path loads + recompiles at runtime.
target_compile_definitions(hello_triangle PRIVATE
  "HF_MAT_JSON=\"${MAT_JSON}\""
  "HF_MAT2_JSON=\"${MAT2_JSON}\""
  "HF_MAT3_JSON=\"${MAT3_JSON}\""
  "HF_MATNORMAL_JSON=\"${MATNORMAL_JSON}\"")
# Absolute path to the glTF showcase model, baked at configure time (repo asset).
target_compile_definitions(hello_triangle PRIVATE
  "HF_MODEL_PATH=\"${CMAKE_SOURCE_DIR}/assets/models/Duck.glb\"")
# Absolute path to the skinned-animation showcase model (Fox.glb: 24-joint skin + animations).
target_compile_definitions(hello_triangle PRIVATE
  "HF_FOX_MODEL_PATH=\"${CMAKE_SOURCE_DIR}/assets/models/Fox.glb\"")
# Absolute path to the full-PBR showcase model (DamagedHelmet.glb: 5-texture metallic-roughness PBR).
target_compile_definitions(hello_triangle PRIVATE
  "HF_HELMET_MODEL_PATH=\"${CMAKE_SOURCE_DIR}/assets/models/DamagedHelmet.glb\"")
# Absolute path to the scene-graph import showcase model (CesiumMilkTruck.glb: node hierarchy +
# multiple meshes/materials; the wheels mesh is placed at two positions via two parent transforms).
target_compile_definitions(hello_triangle PRIVATE
  "HF_TRUCK_MODEL_PATH=\"${CMAKE_SOURCE_DIR}/assets/models/CesiumMilkTruck.glb\"")
# Absolute path to the default data-driven scene description (repo asset).
target_compile_definitions(hello_triangle PRIVATE
  "HF_SCENE_PATH=\"${CMAKE_SOURCE_DIR}/assets/scenes/default.json\"")
# Absolute path to the HDR equirectangular environment map (Slice R: kloofendal clear sky, 1k).
target_compile_definitions(hello_triangle PRIVATE
  "HF_ENV_PATH=\"${CMAKE_SOURCE_DIR}/assets/env/env.hdr\"")
